# ed25519-dalek.wasm

./: Dockerfile  README.md  package-lock.json  package.json  patch.js
.github/workflows/: commit.yml  release.yml
src/node/: index.ts
src/node/mods/: index.test.ts  index.ts
src/wasm/: Cargo.toml
src/wasm/pkg/: ed25519_dalek_wasm.d.ts  ed25519_dalek_wasm.js  ed25519_dalek_wasm.wasm.js  ed25519_dalek_wasm_bg.wasm  ed25519_wasm.d.ts  ed25519_wasm.js  ed25519_wasm.wasm.js  ed25519_wasm_bg.wasm  ed25519_wasm_bg.wasm.d.ts  package.json
src/wasm/src/: lib.rs
src/wasm/src/mods/private_key/: mod.rs
src/wasm/src/mods/signature/: mod.rs
src/wasm/src/mods/signing_key/: mod.rs
src/wasm/src/mods/verifying_key/: mod.rs
