[package]
name = "ed25519-dalek-wasm"
version = "1.0.0"
authors = ["hazae41 <me@hazae41.me>"]
edition = "2021"

description = "WebAssembly port of ed25519-dalek"
repository = "https://github.com/hazae41/ed25519-dalek.wasm"
license = "Unlicense"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
debug = false
opt-level = 3

[dependencies]
wasm-bindgen = { version = "0.2.93", default-features = false }
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["rand_core"] }
rand_core = { version = "0.6.4", default-features = false, features = ["getrandom"] }
getrandom = { version = "0.2.15", default-features = false, features = ["js"] }
